tests/ui/impl-trait/in-trait/alias-bounds-when-not-wf.stderr
warning: the feature `lazy_type_alias` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/alias-bounds-when-not-wf.rs:3:12
   |
LL | #![feature(lazy_type_alias)]
   |            ^^^^^^^^^^^^^^^
   |
   = note: see issue #112792 <https://github.com/rust-lang/rust/issues/112792> for more information
   = note: `#[warn(incomplete_features)]` on by default

error[E0277]: the size for values of type `A<usize>` cannot be known at compilation time
  --> $DIR/alias-bounds-when-not-wf.rs:16:13
   |
LL | fn hello(_: W<A<usize>>) {}
   |             ^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `A<usize>`

error: aborting due to 1 previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0277`.
